<resources>
    <string name="app_name">JOBS List</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="name">Nane</string>
    <string name="age">Age</string>
    <string name="l_name">L_name</string>
    <string name="f_name">F_name</string>
    <string name="textview">TextView</string>
    <string name="no_employes">No Employes</string>
    <string name="birthday">Год рождения: </string>
    <string name="birthday2">birthday</string>
    <string name="speciality">Speciality</string>
    <string name="txt_age">Возраст:</string>
</resources>
