<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeftDetails"
        android:orientation="horizontal">


    <TextView
        android:id="@+id/tvF_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:gravity="left"
        android:text="@string/f_name"
        android:textSize="@dimen/textSize"/>

    <TextView
        android:id="@+id/tvL_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:gravity="left"
        android:layout_marginLeft="@dimen/marginLeft"
        android:text="@string/l_name"
        android:textSize="@dimen/textSize" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:gravity="left"
        android:layout_marginLeft="@dimen/marginLeftDetails"
        android:text="@string/name"
        android:textSize="@dimen/textSize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeftDetails"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:text="@string/txt_age"/>
        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:layout_weight="2"
            tools:text="30"
            android:textSize="@dimen/textSize"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeftDetails"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize"
        android:layout_weight="1"
        android:text="@string/birthday"/>
    <TextView
        android:id="@+id/tvBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:gravity="center"
        android:layout_weight="2"
        tools:text="10.10.1000"
        android:textSize="@dimen/textSize"/>
    </LinearLayout>

</LinearLayout>